home page in facts

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="d-flex justify-content-center align-items-center">
-    <h3>C'est toi la home</h3>
+<div class="container-fluid">
+  <div class="btn btn-success">
+    <a href="#">Go here</a>
   </div>
 </div>
